# fega-metadata-schema

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FUNDING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  change_request.yml
.github/workflows/: check_schema_diff.yml  json_validation_deploying_biovalidator.yml  jsonld_context_check.yml  jsonld_coverage_check.yml  python_tests.yml  rdf_shacl_validation.yml
data/json/: biomaterial-valid_1.json  cohort-valid_1.json
data/jsonld/: biomaterial-valid_1.json  biomaterial-valid_1.jsonld  cohort-valid_1.json  cohort-valid_1.jsonld  external-async.json  process-valid_1.json  protocol-valid_1.json  protocol-valid_2.json  root-sync.json  wrapper-sync.json
docs/: FEGA-metadata-technical-report.md
docs/releases/: README.md
entities/: README.md
entities/biomaterial/: schema.json
entities/cohort/: context.jsonld  frame.jsonld  schema.json
entities/common/: context.jsonld  schema.json
entities/dataset/: schema.json
frames/: FEGA.cohort.json
schemas/: FEGA.biomaterial-test.json  FEGA.biomaterial.json  FEGA.cohort - Copy.json  FEGA.cohort.json  FEGA.common-definitions.json  FEGA.dataset.json  FEGA.graph.json  FEGA.jsonld-schema.json  FEGA.process.json  FEGA.protocol.json  FEGA.test2.json  README.md  reference-test-origin.json
tests/: test_import_smoke.py  test_json_pointer.py  test_jsonld_coverage.py  test_jsonld_frames.py  test_validate_rdf_shacl.py  test_validation_common.py
(+312 files in other folders)
